fixed button submit align

--- a/css/style.css
+++ b/css/style.css
@@ -178,7 +178,11 @@ body {
     .search__input::-webkit-input-placeholder {
       font-weight: 100;
       color: rgba(141, 140, 145, 0.8); }
+  .search__input-container {
+    position: relative; }
   .search__button {
+    position: absolute;
+    top: 0.9rem;
     padding: 1.6rem;
     margin-left: -6rem;
     background-color: #ff5800;
